manifests/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: openshift-cluster-node-tuning-operator
