manifests/05-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-node-tuning-operator
  namespace: openshift-cluster-node-tuning-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cluster-node-tuning-operator
  template:
    metadata:
      labels:
        name: cluster-node-tuning-operator
    spec:
      serviceAccountName: cluster-node-tuning-operator
      containers:
        - name: cluster-node-tuning-operator
          image: registry.svc.ci.openshift.org/openshift/origin-v4.0:cluster-node-tuning-operator
          ports:
          - containerPort: 60000
            name: metrics
          command:
          - cluster-node-tuning-operator
          imagePullPolicy: Always
