manifests/50-operator-ibm-cloud-managed.yaml
# *** AUTOMATICALLY GENERATED FILE - DO NOT EDIT ***
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    capability.openshift.io/name: NodeTuning
    include.release.openshift.io/ibm-cloud-managed: "true"
  name: cluster-node-tuning-operator
  namespace: openshift-cluster-node-tuning-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: cluster-node-tuning-operator
  template:
    metadata:
      annotations:
        openshift.io/required-scc: anyuid
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
      labels:
        name: cluster-node-tuning-operator
    spec:
      containers:
      - args:
        - -v=0
        command:
        - cluster-node-tuning-operator
        image: registry.ci.openshift.org/openshift/origin-v4.0:cluster-node-tuning-operator
        imagePullPolicy: IfNotPresent
        name: cluster-node-tuning-operator
        ports:
        - containerPort: 60000
          name: metrics
        resources:
          requests:
            cpu: 10m
            memory: 20Mi
        terminationMessagePolicy: FallbackToLogsOnError
        volumeMounts:
        - mountPath: /etc/secrets
          name: node-tuning-operator-tls
        - mountPath: /var/run/configmaps/trusted-ca/
          name: trusted-ca
        - mountPath: /apiserver.local.config/certificates
          name: apiservice-cert
      priorityClassName: system-cluster-critical
      securityContext:
        runAsNonRoot: true
        runAsUser: 499
      serviceAccountName: cluster-node-tuning-operator
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/master
        operator: Exists
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 120
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 120
      volumes:
      - name: node-tuning-operator-tls
        secret:
          secretName: node-tuning-operator-tls
      - name: apiservice-cert
        secret:
          defaultMode: 420
          items:
          - key: tls.crt
            path: apiserver.crt
          - key: tls.key
            path: apiserver.key
          secretName: performance-addon-operator-webhook-cert
      - configMap:
          items:
          - key: ca-bundle.crt
            path: tls-ca-bundle.pem
          name: trusted-ca
          optional: true
        name: trusted-ca
